# idea-graph

./: .gitignore  Information.txt  LICENSE  README.md  pyproject.toml
configs/: external_baselines.example.json  external_baselines.paper_faithful.example.json  external_baselines.qwen.json  fixed_control_policy.example.json  openai_compatible.example.json
data/: sample_instance.json
docs/: README.md  april03_ablation_pilot.md  baseline_integration_plan.md  baseline_reproduction_matrix.md  baseline_source_audit.md  benchmarks.md  critic_pools.md  eig_graph_critic_plan.md  evaluation.md  experiment_execution_log.md  graph_critic_dataset_layout.md  implementation-plan.md  paper_experiment_map.md  paper_experiment_plan.md  paper_experiment_tracker.md  paper_protocol.md  r009_aiib_launch_plan.md  reproducibility.md
scripts/: README.md  __init__.py  build_controller_eval_packets.py  build_controller_paper_artifacts.py  build_critic_expansion_pool.py  build_critic_partition_manifest.py  build_critic_split_overrides.py  build_critic_split_registry.py  build_graph_critic_candidate_dataset.py  build_graph_critic_dataset.py  build_paper_batch_artifacts.py  build_paper_eval_freeze_pool.py  build_paper_pilot_artifacts.py  build_parallel_two_head_dataset.py  calibrate_joint_controller.py  check_external_baselines.py  check_openai_compatible.py  collect_critic_train_episodes.py  evaluate_run.py  export_graph_critic_dataset.py  extract_edit_disagreement_subset.py  fetch_ai_idea_bench_2025.py  fetch_liveideabench.py  merge_quality_batch_shards.py  run_controller_eval_packet.py  run_cost_aware_pilot.py  run_matched_budget_pilot.py  run_online_text_critic_adaptation.py  run_pipeline.py  run_prototype.py  run_quality_batch.py  (+6 more)
(+231 files in other folders)
