[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-graph"
version = "0.1.0"
description = "Prototype for delayed-consensus scientific ideation over a typed idea graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.5,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "outputs",
    "data",
    ".tmp-baselines",
    ".tmp-external-baseline-runs",
]
