[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-graph"
version = "0.1.0"
description = "Prototype for scientific ideation with evolving idea graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "torch>=2.4,<3",
    "sentence-transformers>=3,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "outputs",
    "data",
    ".tmp-baselines",
    ".tmp-external-baseline-runs",
]
